[package]
name = "rust-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.0"
actix-rt = "2.2.0"
actix-web = { version = "4" }
anyhow = "1.0"
async-trait = "0.1"
dotenvy = "0.15.1"
envy = "0.4"
log = "0.4.17"
ctrlc = { version = "3.1", features = ["termination"] }
rbatis = "4.3.0"
rbdc-pg={ version="4.3" }
rbs = "4.3.2"
futures = { version = "0.3", features = ["compat"] }
num = { version = "0.4.0", features = ["serde"] }
serde = "1.0.137"
serde_json = "1.0.0"
tokio = { version = "1.0", features = ["full"] }
ethabi = "16.0.0"
web3 = "0.18.0"
hex = "0.4.3"
reqwest = "0.11.13"
bigdecimal = "0.3.1"
chrono = { version = "0.4", features = ["serde"] }
qstring = "0.7.2"
itertools = "0.10.5"